@@ -231,7 +231,7 @@ ConditionCategory:RegisterCondition(9,	 "NAME", {
 ConditionCategory:RegisterCondition(10,	 "LEVEL", {
 	text = L["CONDITIONPANEL_LEVEL"],
 	min = -1,
-	max = 90,
+	max = GetMaxPlayerLevel() + 3,
 	texttable = {[-1] = BOSS},
 	icon = "Interface\\TargetingFrame\\UI-TargetingFrame-Skull",
 	tcoords = {0.05, 0.95, 0.03, 0.97},
